--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,7 +23,7 @@
   },
   "home": {
     "form": {
-      "title": "Contact form"
+      "title": "Feel free to contact me for any purpose"
     }
   },
   "presentation": {
